https://github.com/rreganjr/Requel/issues/253
Fix a ProxyTypesTest fixture that asked CGLIB to subclass Object.

The EntityProxy case built its proxy with `Enhancer.setSuperclass(Object.class)`, which means
defining the generated class in java.lang — sealed on a modern JVM without
`--add-opens=java.base/java.lang=ALL-UNNAMED`, so CI failed with "No compatible defineClass
mechanism detected". Nothing in production does that: DomainObjectWrapper.getEntityFactory always
passes a real entity class.

modules/platform-core/src/test/java/com/rreganjr/repository/jpa/ProxyTypesTest.java
    The proxy now subclasses a second fixture type, OtherEntity, while the interceptor holds an
    Entity. That both avoids java.lang and makes the assertion stronger: userClassOf can only answer
    Entity by reading the interceptor, where with Object as the superclass ClassUtils.getUserClass
    alone might have produced a pass for the wrong reason. A comment records why the superclass is
    not Object, so the fixture does not drift back.